--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 [dependencies.windows]
 version = "0.42.0"
 features = [
-  "Data_Xml_Dom",
+  "implement",
   "Win32_Foundation",
-  "Win32_Security",
-  "Win32_System_Threading",
-  "Win32_UI_WindowsAndMessaging",
+  "Win32_UI_Shell",
 ]
+
+# [build-dependencies.windows-bindgen]
+# version = "0.42.0"
