--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies.windows]
 version = "0.42.0"
 features = [
+  # "interface",
   "implement",
   "Win32_Foundation",
   "Win32_UI_Shell",
